Clean up code from unnecessary comments and reformat code structure for more readability

--- a/views/dialogue/innerDialogueChat.ejs
+++ b/views/dialogue/innerDialogueChat.ejs
@@ -9,38 +9,37 @@
       <div class="card text-bg-light">
       </div>
     </div>
-    <!-- <form action="/dialogue/chat/inner-dialogue" method="post"> -->
-    <div class="col-12" id="botOutput">
-      <div class="card">
-        <form action="/dialogue/chat/inner-dialogue/save" method="post">
-          <div class="col-12" id="botOutput">
-            <div class="card">
-              <!-- save button -->
-              <button class="material-icons position-absolute top-0 end-0 m-3 clickable save-icon" type="submit"
-                name="save" value="<%- i %>">
-                favorite_border
-              </button>
-              <div class="card-body m-3">
-                <div class="card-text" name="data"><%- innerDialogueHistory[i].botResponse %>
+    <form action="/dialogue/chat/inner-dialogue" method="post">
+      <div class="col-12" id="botOutput">
+        <div class="card">
+          <form action="/dialogue/chat/inner-dialogue/save" method="post">
+            <div class="col-12" id="botOutput">
+              <div class="card">
+                <!-- save button -->
+                <button class="material-icons position-absolute top-0 end-0 m-3 clickable save-icon" type="submit" name="save" value="<%- i %>">
+                  favorite_border
+                </button>
+                <div class="card-body m-3">
+                  <div class="card-text" name="data"><%- innerDialogueHistory[i].botResponse %>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-        </form>
-        <hr>
-        <% } %>
+          </form>
+          <hr>
+          <% } %>
+        </div>
       </div>
-    </div>
 
-    <div class="p-5 text-center d-none" id="loadingCard">
-      <span id="loadingContainer"><i class="fa-solid fa-cat fa-bounce fa-2xl" style="color: #ffffff;"></i></i></span>
-      <p style="color: #ffffff;">Please watch this cat while we finish generating!</p>
-    </div>
+      <div class="p-5 text-center d-none" id="loadingCard">
+        <span id="loadingContainer"><i class="fa-solid fa-cat fa-bounce fa-2xl" style="color: #ffffff;"></i></i></span>
+        <p style="color: #ffffff;">Please watch this cat while we finish generating!</p>
+      </div>
   </div>
 </div>
 
 <script>
-  $(document).ready(function () {
+  $(document).ready(function() {
     const container = document.getElementById('chatContainer');
 
     // Scroll to the bottom of the container
@@ -49,7 +48,7 @@
       block: 'end'
     });
 
-    $('#send').click(function () {
+    $('#send').click(function() {
       // show card with loading indicator
       $("#loadingCard").removeClass("d-none");
     });
