--- a/views/dialogue/personaToPersonaChat.ejs
+++ b/views/dialogue/personaToPersonaChat.ejs
@@ -7,8 +7,7 @@
     <!-- Display bot's output -->
     <div class="col-12 my-2" id="botOutput">
       <div class="card">
-        <button class="material-icons position-absolute top-0 end-0 m-3 clickable save-icon" type="submit" name="save"
-          value="<%= index %>">
+        <button class="material-icons position-absolute top-0 end-0 m-3 clickable save-icon" type="submit" name="save" value="<%= index %>">
           favorite_border
         </button>
         <div class="card-body m-3">
@@ -36,7 +35,7 @@
 </div>
 
 <script>
-  $(document).ready(function () {
+  $(document).ready(function() {
     const container = document.getElementById('chatContainer');
 
     // Scroll to the bottom of the container
@@ -45,7 +44,7 @@
       block: 'end'
     });
 
-    $('#send').click(function () {
+    $('#send').click(function() {
       // show card with loading indicator
       $("#loadingCard").removeClass("d-none");
     });
