--- a/views/fromSavedPersona/userPersonaChat.ejs
+++ b/views/fromSavedPersona/userPersonaChat.ejs
@@ -14,9 +14,9 @@
   <form action="saved/persona/dialogue/chat/user-persona/save" method="post">
     <div class="col-12" id="botOutput">
       <div class="card">
+        
         <!-- save button -->
-        <button class="material-icons position-absolute top-0 end-0 m-3 clickable save-icon" type="submit" name="save"
-          value="<%- i %>">
+        <button class="material-icons position-absolute top-0 end-0 m-3 clickable save-icon" type="submit" name="save" value="<%- i %>">
           favorite_border
         </button>
         <div class="card-body m-3">
@@ -34,7 +34,7 @@
 </div>
 
 <script>
-  $(document).ready(function () {
+  $(document).ready(function() {
     const container = document.getElementById('chatContainer');
 
     // Scroll to the bottom of the container
@@ -43,7 +43,7 @@
       block: 'end'
     });
 
-    $('#send').click(function () {
+    $('#send').click(function() {
       // show card with loading indicator
       $("#loadingCard").removeClass("d-none");
     });
