--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,13 +1,12 @@
-<div
-  class="botnav container-fluid text-center fixed-bottom"
->
+<div class="botnav container-fluid text-center fixed-bottom">
   <div class="row">
     <div class="navbar">
+
       <!-- save  -->
       <div class="icon col pt-3">
         <a href="/saved">
           <i class="fa-solid fa-book-bookmark fa-2xl"></i>
-          <p class = "p-1">Saved</p>
+          <p class="p-1">Saved</p>
         </a>
       </div>
 
@@ -22,13 +21,7 @@
       <!-- home -->
       <div class="icon col py-3">
         <a href="/home">
-          <img
-            src="/images/invsona/home.png"
-            alt="home"
-            width="50px"
-            height="50px"
-            id="home"
-          />
+          <img src="/images/invsona/home.png" alt="home" width="50px" height="50px" id="home" />
           <!-- <p>Home</p> -->
         </a>
       </div>
