--- a/views/persona/savedPrompt.ejs
+++ b/views/persona/savedPrompt.ejs
@@ -3,7 +3,8 @@
 <%-include ("../partials/header-persona.ejs")%>
 <%-include ("../partials/emptybackbar.ejs")%>
 <div class="col text-center">
-  <h1>Characteristics</h1></div>
+  <h1>Characteristics</h1>
+</div>
 <div class="col-2 px-2 text-center">
   <form action="/persona/saved-prompt/delete" method="post">
     <input id=deleteInput type="hidden" name="promptIDList" value="" />
