--- a/views/profile/accountSettings.ejs
+++ b/views/profile/accountSettings.ejs
@@ -5,7 +5,9 @@
 
 <!-- header title -->
 <div class="col text-center">
-  <h1><bold>ACCOUNT SETTINGS</bold></h1>
+  <h1>
+    <bold>ACCOUNT SETTINGS</bold>
+  </h1>
 </div>
 </div>
 
@@ -13,37 +15,37 @@
 <div class="container p-4" style="margin-bottom: 100%;">
   <form action="/profile/account-settings" method="post">
     <fieldset id="userInfoField" <% if (disabled) { %>disabled<% } %>>
+
       <!-- Username  -->
       <div class="mb-3">
         <label for="username" class="form-label">Username</label>
         <input type="text" class="form-control" id="username" name="username" value="<%= username %>" disabled />
       </div>
+
       <!-- Name  -->
       <div class="mb-3">
         <label for="name" class="form-label">Name</label>
         <input type="text" class="form-control" id="name" name="name" value="<%= name %>" />
       </div>
+
       <!-- Email  -->
       <div class="mb-3">
         <label for="email" class="form-label">Email address</label>
         <input type="email" class="form-control" id="email" name="email" value="<%= email %>" />
       </div>
-      <!-- Password 
-      <div class="mb-3 pb-4">
-        <label for="password" class="form-label">Password</label>
-        <input type="password" class="form-control" id="password" name="password"/>
-      </div> -->
+
       <!-- Security Question  -->
       <div class="mb-3">
         <label for="securityQuestion" class="form-label">Security Question</label>
         <input type="text" class="form-control" id="securityQuestion" name="securityQuestion" value="<%= securityQuestion %>" />
       </div>
+
       <!-- Security Answer  -->
       <div class="mb-3">
         <label for="securityAnswer" class="form-label">Answer</label>
         <input type="password" class="form-control" id="securityAnswer" name="securityAnswer" value="<%= securityAnswer %>" />
       </div>
-      </fieldset>
+    </fieldset>
 
     <!-- Save button -->
     <button type="submit" class="btn btn-primary" name="action" value="Edit">Edit</button>
@@ -51,14 +53,14 @@
   </form>
 
   <!-- darkmode -->
-<div class="container pt-5">
-  <div class="card text-bg-dark fs-4 mb-3 rounded-5" style="max-width: 25rem;">
-    <div class="card-body">
+  <div class="container pt-5">
+    <div class="card text-bg-dark fs-4 mb-3 rounded-5" style="max-width: 25rem;">
+      <div class="card-body">
         <div class="form-check form-switch align-items-start ">
           <input class="form-check-input" type="checkbox" role="switch" id="dark">
           <span class="material-symbols-rounded">dark_mode</span>
           <label class="form-check-label" for="dark"> Dark mode</label>
-        </div> 
+        </div>
       </div>
     </div>
   </div>
@@ -71,4 +73,3 @@
 <!-- navbar and footer-->
 <%-include ('../partials/navbar.ejs')%>
 <%-include ('../partials/footer.ejs')%>
-
