--- a/views/profile/faq.ejs
+++ b/views/profile/faq.ejs
@@ -5,31 +5,33 @@
 
 <!-- header title -->
 <div class="col text-center">
-  <h1><bold>ABOUT US</bold></h1>
+  <h1>
+    <bold>ABOUT US</bold>
+  </h1>
 </div>
 </div>
 
 <div class="container mt-3">
-    <div class="card">
+  <div class="card">
     <div class="card-body">
-        <h6><b>Q: What is Invsona?</b></h6>
-        <p class="para"> Invsona is a combination word with Invent and Persona.</p>
-        <h6><b>Q: What is Persona?</b></h6>
-        <p class="para">Persona is a fictional character that is generated. They view as life-like due to their personality and interactions.</p>
-        <h6><b>Q: What is the purpose of Invsona?</b></h6>
-        <p class="para">Invsona is a tool that helps to overcome creative block. It is also a tool that helps to generate persona for your creative needs.</p>
-        <h6><b>Q: What is a filter?</b></h6>
-        <p class="para">Accessible through Profile and Saved. Filter allows you to create prompts that you want to generate your persona and/or dialogue.</p>
-        <h6><b>Q: What is a Dialogue?</b></h6>
-        <p class="para">The unique interaction between your personas.</p>
-        <h6><b>Q: If I want to generate a persona with status, what do I do?</b></h6>
-        <p class="para">Go to Saved or Profile > Filters > and add your filters there. </p>
-        <h6><b>Q: How do I share my persona and dialogue?</b></h6>
-        <p class="para">A few possible ways through Persona and hit the share icon or from the Saved on the navigation bar.</p>
-        <h6><b>Q: How do I contact Team Invsona?</b></h6>
-        <p class="para">You can reach our team: Support@Invsona.ca</p>
-        </div>
+      <h6><b>Q: What is Invsona?</b></h6>
+      <p class="para"> Invsona is a combination word with Invent and Persona.</p>
+      <h6><b>Q: What is Persona?</b></h6>
+      <p class="para">Persona is a fictional character that is generated. They view as life-like due to their personality and interactions.</p>
+      <h6><b>Q: What is the purpose of Invsona?</b></h6>
+      <p class="para">Invsona is a tool that helps to overcome creative block. It is also a tool that helps to generate persona for your creative needs.</p>
+      <h6><b>Q: What is a filter?</b></h6>
+      <p class="para">Accessible through Profile and Saved. Filter allows you to create prompts that you want to generate your persona and/or dialogue.</p>
+      <h6><b>Q: What is a Dialogue?</b></h6>
+      <p class="para">The unique interaction between your personas.</p>
+      <h6><b>Q: If I want to generate a persona with status, what do I do?</b></h6>
+      <p class="para">Go to Saved or Profile > Filters > and add your filters there. </p>
+      <h6><b>Q: How do I share my persona and dialogue?</b></h6>
+      <p class="para">A few possible ways through Persona and hit the share icon or from the Saved on the navigation bar.</p>
+      <h6><b>Q: How do I contact Team Invsona?</b></h6>
+      <p class="para">You can reach our team: Support@Invsona.ca</p>
     </div>
+  </div>
 </div>
 
 <!-- navbar and footer -->
