--- a/views/authorization/resetPassword.ejs
+++ b/views/authorization/resetPassword.ejs
@@ -15,104 +15,60 @@
       <p id="slogan" class="ft-3">
         Don't worry we got you cover!
       </p>
- 
-    <!-- FORM -->
-    <div class="container text-start pt-3">
-      <form action="/resetPassword" method="post">
-        <div class="mb-3">
-          <label for="email" class="form-label">Email</label>
-          <input
-            type="email"
-            class="form-control"
-            id="email"
-            name="email"
-            aria-describedby="emailHelp"
-            name="email"
-            value="<%= email %>"
-          />
-        </div>
 
-        <div class="p-4 text-center">
-          <button type="submit" class="btn btn-primary">
-            SUBMIT EMAIL
-          </button>
-        </div>
-      </form>
+      <!-- FORM -->
+      <div class="container text-start pt-3">
+        <form action="/resetPassword" method="post">
+          <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" name="email" value="<%= email %>" />
+          </div>
 
-      <!-- VERIFY ACCOUNT -->
-      <form action="/resetPassword/verified" method="post">
-        <input
-          type="hidden"
-          class="form-control"
-          id="email"
-          name="email"
-          aria-describedby="emailHelp"
-          name="email"
-          value="<%= email %>"
-        />
-        <div class="mb-3">
-          <label for="securityQuestion" class="form-label"
-            >Security Question</label
-          >
-          <input
-            type="text"
-            class="form-control"
-            id="securityQuestion"
-            name="securityQuestion"
-            value="<%= securityQuestion %>"
-          />
-        </div>
+          <div class="p-4 text-center">
+            <button type="submit" class="btn btn-primary">
+              SUBMIT EMAIL
+            </button>
+          </div>
+        </form>
 
-        <div class="mb-3">
-          <label for="securityAnswer" class="form-label">Answer</label>
-          <input
-            type="password"
-            class="form-control"
-            id="securityAnswer"
-            name="securityAnswer"
-            value="<%= securityAnswer %>"
-          />
-        </div>
+        <!-- VERIFY ACCOUNT -->
+        <form action="/resetPassword/verified" method="post">
+          <input type="hidden" class="form-control" id="email" name="email" aria-describedby="emailHelp" name="email" value="<%= email %>" />
+          <div class="mb-3">
+            <label for="securityQuestion" class="form-label">Security Question</label>
+            <input type="text" class="form-control" id="securityQuestion" name="securityQuestion" value="<%= securityQuestion %>" />
+          </div>
 
-        <div class="p-4 text-center">
-          <button type="submit" class="btn btn-primary btn">
-            SUBMIT ANSWER
-          </button>
-        </div>
-      </form>
+          <div class="mb-3">
+            <label for="securityAnswer" class="form-label">Answer</label>
+            <input type="password" class="form-control" id="securityAnswer" name="securityAnswer" value="<%= securityAnswer %>" />
+          </div>
 
-      <!-- RESET PASSWORD -->
-      <form action="/" method="post">
-        <input
-          type="hidden"
-          class="form-control"
-          id="email"
-          name="email"
-          aria-describedby="emailHelp"
-          name="email"
-          value="<%= email %>"
-        />
-        <div class="mb-3">
-          <label for="password" class="form-label">New Password</label>
-          <input
-            type="password"
-            class="form-control"
-            id="password"
-            name="password"
-            value="<%= password %>" <% if (disabled) { %>disabled<% } %>
-            />
-        </div>
+          <div class="p-4 text-center">
+            <button type="submit" class="btn btn-primary btn">
+              SUBMIT ANSWER
+            </button>
+          </div>
+        </form>
 
-        <div class="p-4 text-center">
-          <button type="submit" class="btn btn-primary">
-            RESET PASSWORD
-          </button>
-        </div>
-      </form>
-    </div>
+        <!-- RESET PASSWORD -->
+        <form action="/" method="post">
+          <input type="hidden" class="form-control" id="email" name="email" aria-describedby="emailHelp" name="email" value="<%= email %>" />
+          <div class="mb-3">
+            <label for="password" class="form-label">New Password</label>
+            <input type="password" class="form-control" id="password" name="password" value="<%= password %>" <% if (disabled) { %>disabled<% } %> />
+          </div>
+
+          <div class="p-4 text-center">
+            <button type="submit" class="btn btn-primary">
+              RESET PASSWORD
+            </button>
+          </div>
+        </form>
+      </div>
     </div>
   </div>
 </div>
 
-  <!-- footer -->
-  <%-include ('../partials/footer.ejs')%>
+<!-- footer -->
+<%-include ('../partials/footer.ejs')%>
