--- a/views/authorization/signup.ejs
+++ b/views/authorization/signup.ejs
@@ -3,82 +3,50 @@
 <%-include ('../partials/header.ejs')%>
 <%-include ('../partials/animated-bg-logo.ejs')%>
 
-      <!-- FORM -->
-      <div class="container text-start">
-        <form action="/signup" method="post">
-          <div class="mb-3">
-            <label for="name" class="form-label">Name</label>
-            <input type="name" class="form-control" id="name" name="name" />
-          </div>
+<!-- FORM -->
+<div class="container text-start">
+  <form action="/signup" method="post">
+    <div class="mb-3">
+      <label for="name" class="form-label">Name</label>
+      <input type="name" class="form-control" id="name" name="name" />
+    </div>
 
-          <div class="mb-3">
-            <label for="username" class="form-label">Username</label>
-            <input
-              type="username"
-              class="form-control"
-              id="username"
-              name="username"
-            />
-          </div>
+    <div class="mb-3">
+      <label for="username" class="form-label">Username</label>
+      <input type="username" class="form-control" id="username" name="username" />
+    </div>
 
-          <div class="mb-3">
-            <label for="email" class="form-label">Email</label>
-            <input
-              type="email"
-              class="form-control"
-              id="email"
-              name="email"
-              aria-describedby="emailHelp"
-              name="email"
-            />
-            <div id="emailHelp" class="form-text">
-              We'll never share your email with anyone else.
-            </div>
-          </div>
-
-          <div class="mb-3">
-            <label for="password" class="form-label">Password</label>
-            <input
-              type="password"
-              class="form-control"
-              id="password"
-              name="password"
-            />
-          </div>
-
-          <div class="mb-3">
-            <label for="securityQuestion" class="form-label"
-              >Security Question</label
-            >
-            <input
-              type="text"
-              class="form-control"
-              id="securityQuestion"
-              name="securityQuestion"
-            />
-            <div id="securityQuestionHelp" class="form-text">
-              Remember the answer to your security question in case you forget
-              your password in the future.
-            </div>
-          </div>
-
-          <div class="mb-3">
-            <label for="securityAnswer" class="form-label">Answer</label>
-            <input
-              type="password"
-              class="form-control"
-              id="securityAnswer"
-              name="securityAnswer"
-            />
-          </div>
-
-          <div class="p-4 text-center">
-            <button type="submit" class="btn btn-primary">SIGNUP</button>
-          </div>
-        </form>
+    <div class="mb-3">
+      <label for="email" class="form-label">Email</label>
+      <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" name="email" />
+      <div id="emailHelp" class="form-text">
+        We'll never share your email with anyone else.
       </div>
     </div>
-  </div>
+
+    <div class="mb-3">
+      <label for="password" class="form-label">Password</label>
+      <input type="password" class="form-control" id="password" name="password" />
+    </div>
+
+    <div class="mb-3">
+      <label for="securityQuestion" class="form-label">Security Question</label>
+      <input type="text" class="form-control" id="securityQuestion" name="securityQuestion" />
+      <div id="securityQuestionHelp" class="form-text">
+        Remember the answer to your security question in case you forget
+        your password in the future.
+      </div>
+    </div>
+
+    <div class="mb-3">
+      <label for="securityAnswer" class="form-label">Answer</label>
+      <input type="password" class="form-control" id="securityAnswer" name="securityAnswer" />
+    </div>
+
+    <div class="p-4 text-center">
+      <button type="submit" class="btn btn-primary">SIGNUP</button>
+    </div>
+  </form>
 </div>
 
 <!-- footer -->
