--- a/views/fromSavedPersona/innerDialogueChat.ejs
+++ b/views/fromSavedPersona/innerDialogueChat.ejs
@@ -16,8 +16,7 @@
           <div class="col-12" id="botOutput">
             <div class="card">
               <!-- save button -->
-              <button class="material-icons position-absolute top-0 end-0 m-3 clickable save-icon" id="save"
-                type="submit" name="save" value="<%- i %>">
+              <button class="material-icons position-absolute top-0 end-0 m-3 clickable save-icon" id="save" type="submit" name="save" value="<%- i %>">
                 favorite_border
               </button>
 
@@ -41,10 +40,9 @@
     <p style="color: #ffffff;">Please watch this cat while we finish generating!</p>
   </div>
 </div>
-</div>
 
 <script>
-  $(document).ready(function () {
+  $(document).ready(function() {
     const container = document.getElementById('chatContainer');
 
     // Scroll to the bottom of the container
@@ -53,7 +51,7 @@
       block: 'end'
     });
 
-    $('#send').click(function () {
+    $('#send').click(function() {
       // show card with loading indicator
       $("#loadingCard").removeClass("d-none");
     });
