--- a/views/authorization/logout.ejs
+++ b/views/authorization/logout.ejs
@@ -12,7 +12,7 @@
 <!-- logo -->
 <div class="container-fluid" id="login" style="padding-top: 200px;">
   <div id="box">
-    <img id="logo" class="special" src="/images/invsona/invsona.png" alt="invsona logo" />
+    <img id="logo" class="special" src="/images/invsona/Invsona.png" alt="invsona logo" />
     <h1 class="pt-3 glow" onclick="secret()" id="title">Invsona</h1>
     <div class="container mb-5">
       <p id="slogan">Character Creation at Your Finger Tips</p>
